# cgal-polygonal-surface-reconstruction-playground

./: CMakeLists.txt  README.md  local-build.cmd
app/: CMakeLists.txt
app/src/: main.cpp
